<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#e5e5e5">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_forgotPWTopLine"
        android:id="@+id/forgotPWTopLine"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_forgotPWBottomLine"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_email"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:hint="@string/field_email"
        android:background="#ffffff"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            style="@style/AppTheme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_forgotPW"
            android:id="@+id/button_forgotPW"
            android:gravity="center"
            android:textSize="36sp"
            android:padding="10dp"
            android:onClick="openLogin"
            android:background="#c3c3c3"
            android:textColor="#FFFFFF"
            android:layout_margin="20dp" />

    </LinearLayout>

</LinearLayout>